Fixed top image alignment

--- a/public/styles/brands-index.css
+++ b/public/styles/brands-index.css
@@ -67,7 +67,7 @@ h1 {
     font-size: 20px;
     width: 300px;
     /* text-align: center; */
-    margin: 0px 0px 0px 20px;
+    margin: 0px 0px 0px 0px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 1500;
     text-decoration: none;
